# asQ

./: .gitignore  LICENSE  Makefile  README.md  TODO  design_points.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test-install.yml  test-pip.yml  test.yml
asQ/: __init__.py  allatoncesystem.py  common.py  diag_preconditioner.py  diag_preconditioner_new.py  domain.py  ensemble.py  paradiag.py  paradiag_new.py  parallel_arrays.py  pencil.py  post.py  profiling.py
asQ/allatonce/: __init__.py  form.py  function.py  function_space.py  jacobian.py  mixin.py  solver.py
asQ/complex_proxy/: __init__.py  common.py  mixed.py  (+3 more)
asq_manuscript_examples/: README.md  advection_paradiag.py  advection_serial.py  argparse_formatter.py  heat.py  linear_shallow_water_paradiag.py  linear_shallow_water_serial.py  nonlinear_shallow_water_paradiag.py  nonlinear_shallow_water_serial.py  vertical_slice_paradiag.py  vertical_slice_serial.py
case_studies/: checkpoint_to_pvd.py
examples/: checkpointing.py  linear_sw.py  sw_diag.py  swim.py  swim.serial.py  swim.verify.py  swim_mg.py  swim_serial.py  swim_verify.py  test_gusto_advection.py  test_gusto_replace.py  test_replace.py  test_replace_mixed.py  test_replace_primal.py  test_swe_replace.py
mismatching-kernels/: src-rank0.c  src-rank1-copy.c
test/: conftest.py  test_paradiag.py
tests/: conftest.py  test_allatoncesystem.py  test_paradiag.py  test_parallel_arrays.py  test_preconditioners.py  test_utils.py
utils/: __init__.py  broken_projections.py  diagnostics.py  hybridisation.py  mg.py  misc.py  timing.py  units.py
(+222 files in other folders)
